# crypton

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Result.md  backtest_report_BTC_USDT_20250520_232305.html  backtest_report_ETH_USDT_20250520_232305.html  backtest_report_SUI_USDT_20250520_232306.html  cancel_all_orders.py  check_balance.py  check_open_positions.py  check_spec_balance.py  config.yml  docker-compose.yml  portfolio_backtest_report_20250524_144518_003162.html  portfolio_backtest_report_20250524_163652_244523.html  portfolio_backtest_report_20250524_163816_853674.html  portfolio_backtest_report_20250524_163928_135222.html  portfolio_backtest_report_20250524_164005_138262.html  portfolio_backtest_report_20250524_164040_793756.html  portfolio_backtest_report_20250524_164119_764864.html  portfolio_backtest_report_20250524_164321_100459.html  prompt.md  pyproject.toml  sell_crypto.py  test_discord_notify.py
.github/workflows/: ci.yml
crypton/: main.py  main.py.backup
crypton/backtesting/: backtest.py
crypton/data/: fetcher.py
crypton/execution/: order_manager.py
crypton/indicators/: technical.py
crypton/strategy/: mean_reversion.py
crypton/utils/: config.py  debug.py  logger.py  notify.py  trade_history.py
data/: trade_history.json
docs/: AgentSDK_Upgrade.md  project_description.md
performances/: backtest_summary.csv  portfolio_backtest_summary.csv
performances/detailed_logs/: Result1.json  Result10.json  Result11.json  Result2.json  Result3.json  Result4.json  (+5 more)
tests/: test_data_fetcher.py
